<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <!--add buttons and stuff-->
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goSlow"
            android:id="@+id/checkBox" android:layout_weight="1"/>
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_weight="1"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/siteName" android:onClick="eraseMe"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startRead"
            android:id="@+id/button"
            android:layout_gravity="bottom"
            android:onClick="startDownloadT"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopRead"
            android:id="@+id/button2"
            android:layout_gravity="bottom"
            android:onClick="stopDownloadT"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:id="@+id/textView"
            android:layout_gravity="bottom"/>


</LinearLayout>

